--- a/src/main/resources/templates/kassza/kassza.html
+++ b/src/main/resources/templates/kassza/kassza.html
@@ -222,9 +222,9 @@
 <body>
 <h1 style="text-align: center; background-color: darkblue; color: white; height: 55px; padding-top: 5px">
     Üdvözöljük!</h1>
-<h2 th:text="${vonalkodBeolvasasHiba}" th:hidden="${!isNincsElegTermek}"></h2>
-<h2 style="position: fixed; bottom: 165px; color: darkblue; font-size: 31px">Kérjük olvassa le a Terméket, vagy
-    válasszon a listából!</h2>
+<h2 style="position: fixed; bottom: 160px; color: darkblue; font-size: 31px"
+    th:text="${!isNincsElegTermek} ? 'Kérjük olvassa le a Terméket, vagy válasszon a listából! ': ${vonalkodBeolvasasHiba}"
+    th:style="${!isNincsElegTermek} ? 'position: fixed; bottom: 160px; color: darkblue; font-size: 31px':'position: fixed; bottom: 160px;font-size: 31px;color:white;background:red'"></h2>
 <div class="container" style="margin-top: -10px;">
     <div class="row">
         <div class="col-6"
