--- a/src/main/resources/templates/kassza/bankjegyleltar.html
+++ b/src/main/resources/templates/kassza/bankjegyleltar.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Raktár</title>
     <style>
-        .list-group{
+        .list-group {
             margin-bottom: 10px;
             overflow-y: scroll;
             overflow-x: hidden;
@@ -36,7 +37,8 @@
             -webkit-user-select: none;
             touch-action: manipulation;
         }
-        .button-76:disabled{
+
+        .button-76:disabled {
             background-color: whitesmoke;
         }
 
@@ -55,7 +57,8 @@
     </style>
 </head>
 <body>
-<h1 style="text-align: center; background-color: whitesmoke; color: black; height: 55px; padding-top: 5px">Bankjegy leltár</h1>
+<h1 style="text-align: center; background-color: whitesmoke; color: black; height: 55px; padding-top: 5px">Bankjegy
+    leltár</h1>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
@@ -75,7 +78,8 @@
             <td th:text="${item.ertek}">Bankjegy</td>
             <td th:text="${item.mennyiseg}">Mennyiseg</td>
             <td>
-                <form style="text-align: right" th:action="@{'/kassza/raktar/{id}'(id=${item.id})}" method="get">
+                <form style="text-align: right" th:action="@{'/kassza/bankjegyleltar/{id}'(id=${item.id})}"
+                      method="get">
                     <input type="submit" class="btn btn-success edit-btn" value="Módosít"/>
                 </form>
             </td>
@@ -83,6 +87,34 @@
         </tbody>
     </table>
 </div>
+<br>
+<br>
+<br>
+<form th:action="@{'/kassza/bankjegyleltar/{id}' (id=${formItem.id})}"
+      method="post" th:object="${formItem}" class="row" enctype="multipart/form-data"
+      style="position: fixed;left: 50%">
+    <div class="col">
+        <label>
+            <input type="number"
+                   maxlength="3"
+                   class="form-control"
+                   placeholder="Mennyiseg"
+                   th:field="*{mennyiseg}"
+                   th:classappend="${#fields.hasErrors('mennyiseg')} ? 'is-invalid' : 'is-valid'"
+                   th:if="${formItem.id != null}"/>
+            <div class="invalid-feedback"
+                 th:if="${#fields.hasErrors('mennyiseg')}"
+                 th:errors="*{mennyiseg}">
+                Hibaüzenet
+            </div>
+        </label>
+    </div>
+    <div class="col">
+        <h3 th:text="${formItem.ertek}+' Ft-os bankjegy mennyiség szerkesztése:'" style="color:darkblue;background-color: whitesmoke; position: fixed; left: 0" th:hidden="${formItem.id == null}"></h3>
+        <input th:if="${formItem.id != null}" class="btn btn-primary" type="submit" value="Módosít"
+               style="position: fixed; left: 70%"/>
+    </div>
+</form>
 <!--
 <h3 th:text="${formItem.id}">Termék módosítása</h3>
 <form th:action="@{'/kassza/raktar/{id}' (id=${formItem.id})}"
@@ -123,7 +155,8 @@
 -->
 <form th:action="@{/}" style="padding-top: 2%">
     <div id="back-button" class="position-relative" style="text-align: center">
-        <button class="button-76" style="position: fixed; bottom: 0; width: 400px; left: 550px;" type="submit">VISSZA</button>
+        <button class="button-76" style="position: fixed; bottom: 0; width: 400px; left: 550px;" type="submit">VISSZA
+        </button>
     </div>
 </form>
 </div>
