--- a/src/main/resources/templates/kassza/raktar.html
+++ b/src/main/resources/templates/kassza/raktar.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Raktár</title>
     <style>
-        .list-group{
+        .list-group {
             margin-bottom: 10px;
             overflow-y: scroll;
             overflow-x: hidden;
@@ -36,7 +37,8 @@
             -webkit-user-select: none;
             touch-action: manipulation;
         }
-        .button-76:disabled{
+
+        .button-76:disabled {
             background-color: whitesmoke;
         }
 
@@ -60,43 +62,45 @@
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
 <div class="list-group">
-<table class="table table-striped">
-    <thead>
-    <tr>
-        <th scope="col">Id</th>
-        <th scope="col">Név</th>
-        <th scope="col">Ár</th>
-        <th scope="col">Mennyiség</th>
-        <th scope="col">Vonalkód</th>
-        <th scope="col">Kép</th>
-        <th scope="col">Korhataros</th>
-        <th scope="col"></th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="item : ${allItem}">
-        <th scope="row" th:text="${item.id}">0</th>
-        <td th:text="${item.megnevezes}">Név</td>
-        <td th:text="${item.ar}">100</td>
-        <td th:text="${item.mennyiseg}">db</td>
-        <td th:text="${item.vonalkod}">######</td>
-        <td>
-            <img style="width: 40px; height: 40px" src="istockphoto-1206806317-170667a.jpg" th:if="${item.kep!=null}" th:src="@{'/kassza/raktar/{id}/kep'(id=${item.id})}">
-        </td>
-        <td th:text="${item.korhataros}">nem</td>
-        <td>
-            <form style="text-align: right" th:action="@{'/kassza/raktar/{id}'(id=${item.id})}" method="get">
-                <input type="submit" class="btn btn-success edit-btn" value="Módosít"/>
-            </form>
-        </td>
-        <td>
-            <form style="text-align: right" th:action="@{'/kassza/raktar/delete/{id}'(id=${item.id})}" method="post">
-                <input type="submit" class="btn btn-danger" value="Töröl"/>
-            </form>
-        </td>
-    </tr>
-    </tbody>
-</table>
+    <table class="table table-striped">
+        <thead>
+        <tr>
+            <th scope="col">Id</th>
+            <th scope="col">Név</th>
+            <th scope="col">Ár</th>
+            <th scope="col">Mennyiség</th>
+            <th scope="col">Vonalkód</th>
+            <th scope="col">Kép</th>
+            <th scope="col">Korhataros</th>
+            <th scope="col"></th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="item : ${allItem}">
+            <th scope="row" th:text="${item.id}">0</th>
+            <td th:text="${item.megnevezes}">Név</td>
+            <td th:text="${item.ar}">100</td>
+            <td th:text="${item.mennyiseg}">db</td>
+            <td th:text="${item.vonalkod}">######</td>
+            <td>
+                <img style="width: 40px; height: 40px" src="istockphoto-1206806317-170667a.jpg"
+                     th:if="${item.kep!=null}" th:src="@{'/kassza/raktar/{id}/kep'(id=${item.id})}">
+            </td>
+            <td th:text="${item.korhataros}">nem</td>
+            <td>
+                <form style="text-align: right" th:action="@{'/kassza/raktar/{id}'(id=${item.id})}" method="get">
+                    <input type="submit" class="btn btn-success edit-btn" value="Módosít"/>
+                </form>
+            </td>
+            <td>
+                <form style="text-align: right" th:action="@{'/kassza/raktar/delete/{id}'(id=${item.id})}"
+                      method="post">
+                    <input type="submit" class="btn btn-danger" value="Töröl"/>
+                </form>
+            </td>
+        </tr>
+        </tbody>
+    </table>
 </div>
 <h3 th:if="${formItem.id == null}">Termék hozzáadása</h3>
 <h3 th:if="${formItem.id != null}">Termék módosítása</h3>
@@ -162,26 +166,28 @@
     <div class="col">
         <label>
             <input type="checkbox"
-                   th:checked="${korhataros}"
-                   />
+                   th:field="*{korhataros}"
+                   th:value="${korhataros}"
+                   th:checked="${formItem.korhataros}"
+            />
 
         </label>
     </div>
 
-        <div class="col" th:object="${kepFeltoltesCommand}" >
-            <label>
-                <input type="file"
-                       class="form-control-file"
-                       th:field="*{file}"
-                       th:classappend="${#fields.hasErrors('file')} ? 'is-invalid' : 'is-valid'"
-                >
-                <div class="invalid-feedback"
-                     th:if="${#fields.hasErrors('file')}"
-                     th:errors="*{file}">
-                    Hibaüzenet
-                </div>
-            </label>
-        </div>
+    <div class="col" th:object="${kepFeltoltesCommand}">
+        <label>
+            <input type="file"
+                   class="form-control-file"
+                   th:field="*{file}"
+                   th:classappend="${#fields.hasErrors('file')} ? 'is-invalid' : 'is-valid'"
+            >
+            <div class="invalid-feedback"
+                 th:if="${#fields.hasErrors('file')}"
+                 th:errors="*{file}">
+                Hibaüzenet
+            </div>
+        </label>
+    </div>
 
     <div class="col">
         <input th:if="${formItem.id == null}" class="btn btn-primary" type="submit" value="Hozzáad"/>
@@ -190,7 +196,8 @@
 </form>
 <form th:action="@{/}" style="padding-top: 2%">
     <div id="back-button" class="position-relative" style="text-align: center">
-        <button class="button-76" style="position: fixed; bottom: 0; width: 400px; left: 550px;" type="submit">VISSZA</button>
+        <button class="button-76" style="position: fixed; bottom: 0; width: 400px; left: 550px;" type="submit">VISSZA
+        </button>
     </div>
 </form>
 </div>
