--- a/src/main/resources/templates/kassza/kezdes.html
+++ b/src/main/resources/templates/kassza/kezdes.html
@@ -89,5 +89,6 @@ th:object="${allTermek}"
     <a type="button" style="position: fixed; bottom: 0;left: 0; width: 130px" class="button-76"  href="raktar.html" th:href="@{/kassza/raktar}">Raktár</a>
 </p>
     <a type="button" style="position: fixed; bottom: 0;left: 150px; width: 175px" class="button-76"  href="bankjegyleltar.html" th:href="@{/kassza/bankjegyleltar}">Bankjegyek</a>
+    <a type="button" style="position: fixed; bottom: 0;right:0; width: 150px" class="button-76"  href="bankjegyleltar.html" th:href="@{/kassza/admin}">Admin</a>
 </body>
 </html>
