--- a/src/main/resources/templates/kassza/kezdes.html
+++ b/src/main/resources/templates/kassza/kezdes.html
@@ -74,6 +74,9 @@
 </head>
 
 <body>
+<audio autoplay="autoplay">
+    <source src="/static/hikariare.mp3" type="audio/mpeg"></source>
+</audio>
 <h1 style="text-align: center; background-color: darkblue; color: white; height: 55px; padding-top: 5px">Üdvözöljük!</h1>
 <h2 style="position: fixed; bottom: 50px;left: 450px;font-size: 30px; color: darkblue">
     Vásárlás kezdéséhez nyomja meg a gombot
