--- a/src/main/resources/templates/kassza/kassza.html
+++ b/src/main/resources/templates/kassza/kassza.html
@@ -218,10 +218,20 @@
     </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script src="js/jquery-3.5.1.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $("#hitelesitesModal").on('shown.bs.modal', function () {
+                $(this).find('#hitelesito-kod').focus();
+            });
+        });
+    </script>
 </head>
 <body>
 <h1 style="text-align: center; background-color: darkblue; color: white; height: 55px; padding-top: 5px">
     Üdvözöljük!</h1>
+<h2 th:hidden="${!isErvenytelenKod}" style="position: fixed; bottom: 210px;font-size: 31px;color:white;background:red">
+    Hibás hitelesítő kód!</h2>
 <h2 style="position: fixed; bottom: 160px; color: darkblue; font-size: 31px"
     th:text="${!isNincsElegTermek} ? 'Kérjük olvassa le a Terméket, vagy válasszon a listából! ': ${vonalkodBeolvasasHiba}"
     th:style="${!isNincsElegTermek} ? 'position: fixed; bottom: 160px; color: darkblue; font-size: 31px':'position: fixed; bottom: 160px;font-size: 31px;color:white;background:red'"></h2>
@@ -309,6 +319,32 @@
                                     </button>
                                 </form>
                             </div>
+                            <div class="col">
+                                <!--<form th:action="@{'/kassza/{kosarId}/hitelsites'(kosarId=${kosar.kosarId})}"
+                                      method="post" th:hidden="${!termekmennyiseg.hitelesitesSzukseges}">
+                                    <button type="submit"
+                                            th:class="${kosar.hitelesites == T(hu.progmatic.kozos.kassza.Hitelesites).HITELESITVE} ? 'btn btn-secondary' : 'btn btn-warning'"
+                                            th:disabled="${kosar.hitelesites == T(hu.progmatic.kozos.kassza.Hitelesites).HITELESITVE}">
+                                        <i class="bi bi-exclamation-triangle" style="color: white"></i>
+                                    </button>
+                                </form>-->
+                                <form th:if="${kosar.hitelesites == T(hu.progmatic.kozos.kassza.Hitelesites).HITELESITVE && termekmennyiseg.hitelesitesSzukseges}">
+                                    <button type="submit"
+                                            class="btn btn-secondary"
+                                            th:disabled="${kosar.hitelesites == T(hu.progmatic.kozos.kassza.Hitelesites).HITELESITVE}">
+                                        <i class="bi bi-exclamation-triangle" style="color: white"></i>
+                                    </button>
+                                </form>
+
+                                <!-- Button trigger modal hitelesit -->
+                                <div th:if="${kosar.hitelesites == T(hu.progmatic.kozos.kassza.Hitelesites).NINCS_HITELESITVE && termekmennyiseg.hitelesitesSzukseges}">
+                                    <button type="button" class="btn btn-warning"
+                                            data-bs-toggle="modal"
+                                            data-bs-target="#hitelesitesModal">
+                                        <i class="bi bi-exclamation-triangle" style="color: white"></i>
+                                    </button>
+                                </div>
+                            </div>
                         </div>
                     </td>
                 </tr>
@@ -364,9 +400,10 @@
         </div>
         <div class="col-3"
              style="font-size: 50px;text-align: center;border: 3px solid darkblue; background-color: whitesmoke; border-right: whitesmoke; position: fixed; right: 0; height: 300px; padding-top: 100px">
-            <img  style="width: 382px; height: 295px; position: fixed; right: 0px; top: 55px;"
-                  alt="istockphoto-1206806317-170667a.jpg" th:if="${kosar.termekMennyisegDtoList.size()!=0}"  th:src="@{'/kassza/raktar/{id}/kep'(id=${kosar.termekMennyisegDtoList.get(0).termekId})}">
-<!--             th:text="${kosar.getTermekMennyisegDtoList().size() == 0} ? 'Termék neve' : ${kosar.getTermekMennyisegDtoList().get(0).getNev()} + ' ' + ${kosar.getTermekMennyisegDtoList().get(0).getMennyiseg()} + ' db'">-->
+            <img style="width: 382px; height: 295px; position: fixed; right: 0px; top: 55px;"
+                 alt="istockphoto-1206806317-170667a.jpg" th:if="${kosar.termekMennyisegDtoList.size()!=0}"
+                 th:src="@{'/kassza/raktar/{id}/kep'(id=${kosar.termekMennyisegDtoList.get(0).termekId})}">
+            <!--             th:text="${kosar.getTermekMennyisegDtoList().size() == 0} ? 'Termék neve' : ${kosar.getTermekMennyisegDtoList().get(0).getNev()} + ' ' + ${kosar.getTermekMennyisegDtoList().get(0).getMennyiseg()} + ' db'">-->
             <!--th:text="${kosar.getUtolsoHozzaadottTermekmennyisegDto() == null} ? 'Aktuálisan hozzáadott termék képe' : ${kosar.getUtolsoHozzaadottTermekmennyisegDto().getNev()} + ' ' + ${kosar.getUtolsoHozzaadottTermekmennyisegDto().getMennyiseg()} + ' db'"> -->
         </div>
     </div>
@@ -380,11 +417,20 @@
         <div class="lower">
         </div>
         <div class="col-2" style="text-align: center; font-size: 30px">
-            <form th:action="@{'/kassza/fizetes/{kosarId}'(kosarId=${kosar.kosarId})}" method="get">
+            <form th:if="${kosar.hitelesites != T(hu.progmatic.kozos.kassza.Hitelesites).NINCS_HITELESITVE}"
+                  th:action="@{'/kassza/fizetes/{kosarId}'(kosarId=${kosar.kosarId})}" method="get">
                 <input th:disabled="${kosar.getTermekMennyisegDtoList().size() == 0}" type="submit" class="button-76"
                        style="font-size:23px; position: fixed; bottom: 0;right: 0; width: 250px;height: 150px;"
                        value="Számlához"/>
             </form>
+            <!-- Button trigger modal nem lehet hitelesítés nélkül fizetni-->
+            <div th:if="${kosar.hitelesites == T(hu.progmatic.kozos.kassza.Hitelesites).NINCS_HITELESITVE}">
+                <button type="button" class="button-76"
+                        style="font-size:23px; position: fixed; bottom: 0;right: 0; width: 250px;height: 150px;" data-bs-toggle="modal"
+                        data-bs-target="#nemLehetFizetni">
+                    Számlához
+                </button>
+            </div>
         </div>
         <div class="col-2">
             <div th:if="${kosar.getTermekMennyisegDtoList().size() == 0}">
@@ -393,7 +439,7 @@
                            style="position: fixed; bottom: 0;left: 0; height: 150px; width: 250px" value="Vissza"/>
                 </form>
             </div>
-            <!-- Button trigger modal -->
+            <!-- Button trigger modal nem lehet visszalépni-->
             <div th:if="${kosar.getTermekMennyisegDtoList().size() > 0}">
                 <button type="button" class="button-76"
                         style="position: fixed; bottom: 0;left: 0; height: 150px; width: 250px" data-bs-toggle="modal"
@@ -430,6 +476,27 @@
     </div>
 </div>
 
+
+<!-- Modal hitelesítés nélkül nem lehet fizetni -->
+<div class="modal fade alert-danger" id="nemLehetFizetni" data-bs-backdrop="static" data-bs-keyboard="false"
+     tabindex="-1" aria-labelledby="nemLehetFizetniLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="nemLehetFizetniLabel"><i class="bi-exclamation-triangle-fill"></i>Hitelesítés szükséges!</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                A kosar tartalmaz olyan terméket, amihez hitelesítés szükséges! A fizetés csak a hitelesítés után lehetséges!
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Vissza</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 <!-- Vonalkód beolvasáshoz szükséges rész-->
 <form id="beolvasoForm" class="row"
       th:action="@{'/kassza/{kosarId}/addtermekJs' (kosarId=${kosar.kosarId})}"
@@ -455,6 +522,35 @@
 </form>
 <!--  ::::::::::::::::::::::::::::::::::::::::::::::::::::  -->
 
+<!-- Modal a hitelesítéshez -->
+<div class="modal fade" id="hitelesitesModal" tabindex="-1" role="dialog" aria-labelledby="hitelesitesModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="hitelesitesModal1Label">Hitelesítés</h5>
+                <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form th:object="${hitelesitoKod}"
+                      th:action="@{'/kassza/{kosarId}/hitelsites'(kosarId=${kosar.kosarId})}" method="post">
+                    <div class="form-group">
+                        <label for="hitelesito-kod" class="col-form-label">Hitelesítő kód</label>
+                        <input type="text" class="form-control" id="hitelesito-kod" th:field="*{kod}">
+                        <hr>
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Bezár</button>
+                        <input type="submit" class="btn btn-primary" value="Küldés" data-bs-dismiss="modal"/>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<!--  ::::::::::::::::::::::::::::::::::::::::::::::::::::  -->
 
 </body>
 <footer style="font-size: 14px">
