--- a/src/main/resources/templates/kassza/kosarlista.html
+++ b/src/main/resources/templates/kassza/kosarlista.html
@@ -49,31 +49,53 @@
             text-align: center;
         }
     </style>
+
+    <script>
+            setTimeout(function () {
+                document.getElementById("send").submit();
+            }, 2500);
+    </script>
 </head>
 <body>
 <h1>Bentragadt Kosarak törlése</h1>
-<table class="table table-striped">
+
+<table class="list-group">
     <thead>
-    <tr>
-        <th scope="col">Id</th>
-        <th scope="col" style="position:fixed;right: 10px">Törlés</th>
+    <tr style="font-size: 30px;">
+        <h3>Kosár tartalma:</h3></tr>
+    <tr style="border-bottom: 1px solid darkblue;background-color: white;">
+        <td style="width: 150px">TERMÉK NEVE</td>
+        <td style="width: 100px">EGYSÉGÁR</td>
+        <td style="width: 50px">DB</td>
+        <td style="width: 100px">ÖSSZESEN</td>
+
     </tr>
     </thead>
-    <tbody>
-    <tr th:each="kosar : ${allKosar}">
-        <th scope="row" th:text="${kosar.kosarId}">0</th>
-        <th scope="row">
-            <form style="text-align: right" th:action="@{'/kassza/admin/delete/{kosarId}'(kosarId=${kosar.kosarId})}" method="post">
-                <input type="submit" class="btn btn-success edit-btn" th:value="'Törlés'"/>
-            </form>
+    <tbody class="list-group2">
+    <tr th:each="termekmennyiseg, iter : ${kosar.getTermekMennyisegDtoList()}"
+        style="border-right: 1px solid darkblue"
+        th:style="${iter.index % 2 == 0} ? 'background-color:#fff' : 'background-color:whitesmoke'">
+        <th style="width: 150px" scope="col" th:text="${termekmennyiseg.nev}">Termék neve</th>
+        <th style="width: 100px" scope="col" th:text="${termekmennyiseg.ar}">Ár</th>
+        <th style="width: 50px" scope="col" th:text="${termekmennyiseg.mennyiseg}">Mennyiség</th>
+        <th style="width: 100px; font-style: italic" scope="col"
+            th:text="${termekmennyiseg.mennyiseg*termekmennyiseg.ar} + ' Ft'">
+            Mennyiség
         </th>
+        <th style="width: 100px" scope="col"></th>
     </tr>
+
+
     </tbody>
+</table>
+
     <form th:action="@{/}" style="padding-top: 2%">
         <div id="back-button" class="position-relative" style="text-align: center">
             <button class="button-76" style="position: fixed; bottom: 0; width: 400px; left: 550px;" type="submit">VISSZA</button>
         </div>
     </form>
-</table>
+    <form th:action="@{'/kassza/admin'}" id="send" method="get">
+        <input type="submit">
+    </form>
 </body>
 </html>
